package charchat.domain

data class Action(val text: String, val type: ActionType)
