package charchat.domain

data class PartyMember(val campaign: Campaign, val character: Character)
