package charchat.domain

data class User(
    val id: ID,
    val name: String
)
