@startuml
!define LIGHTRED
!includeurl https://raw.githubusercontent.com/Drakemor/RedDress-PlantUML/master/style.puml

class User {
    +name: String[1]
}

note right of User::createCampaign
    Creates campaing and becomes DM
end note

class Campaign {
    +dungeonMaster: User[1]
    +name: String[1]
    +startScene(): Scene
    +addCharacter(Character)
    +deleteCharacter(Character)
}

class Player {
    +createCharacter(): Character
}

class DungeonMaster {
    +createCampaign(): Campaign
}

class PartyMember {
    +plus(Action): Event
}

class Invite {
    +url: URL[1]
}

class Character {
    +name: String[1]
}

class Scene {
    +name: String
    +addEvent(Event)
    +addPartyMember(PartyMember)
}

class Event
class ActionEvent
class WorldEvent

class Action {
    +text: String[1]
    +actor: Character[1]
    +type: ActionType[1]
}

DungeonMaster "1" --> "0..*" Campaign : +campaigns
Player "1" --> "0..*" Character : +characters

Campaign "1" <--> "1" Invite : +invite
Campaign "1" --> "0..*" Scene : +scenes
Campaign ..> Character

PartyMember "1" --> "1" Character
PartyMember "0..1" <--> "1" Campaign

PartyMember "1..*" <--> "0..*" Scene : +scenes
PartyMember ..> Event
PartyMember ..> Action

Scene "1" --> "*" Event : +events

ActionEvent --|> Event
WorldEvent --|> Event

ActionEvent "1" --> "1" Action

@enduml